[gd_scene load_steps=4 format=2]

[ext_resource path="res://audio/Hydrocity.wav" type="AudioStream" id=3]
[ext_resource path="res://audio.gd" type="Script" id=6]
[ext_resource path="res://audio/SUPERMAN v1.wav" type="AudioStream" id=7]

[node name="audio" type="Node"]
script = ExtResource( 6 )

[node name="music_audio" type="Node" parent="."]

[node name="tit_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0

[node name="bg_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -15.0
